<resources>
    <string name="app_name">Salud-App</string>
    <string name="TextV1">¡Bienvenid@!</string>
    <string name="TextV2">Regístrate:</string>
    <string name="TextV3">Selecciona tú rol:</string>
    <string name="ImageVF">Fondo</string>
    <string name="Butt1">Profesores</string>
    <string name="Butt2">Estudiantes</string>
    <string name="Butt3">ADMINISTRADORES</string>
    <string name="Butt4">Siguiente</string>
    <string name="ImageButt1">Salida</string>
    <string name="TextV4">Salir</string>
    <string name="ImageButt2">Universidad ABC</string>
    <string name="ImageButt3">Logo APP</string>
    <string name="Butt5">Profesor</string>
    <string name="ImageV1">Carga tú Foto Profesor</string>
    <string name="Butt6">+Subir Foto ↑</string>
    <string name="row1">Nombres: </string>
    <string name="row2">Apellidos: </string>
    <string name="row3">Programa: </string>
    <string name="row4">Contraseña: </string>
    <string name="Butt7">Registrar</string>
    <string name="TextV6">Volver</string>
    <string name="TextV7">Diligencia con tus datos todos los campos a continuación:</string>
    <string name="ImageButt7">Volver</string>
    <string name="Butt8">Estudiante</string>
    <string name="ImageButt8">Volver</string>
    <string name="TextV8">Volver</string>
    <string name="ImageV2">Carga tú Foto Estudiante</string>
    <string name="Butt9">+Subir Foto ↑</string>
    <string name="TextV9">Diligencia con tus datos todos los campos a continuación:</string>
    <string name="Butt10">Registrar</string>
    <string name="ImageButt9">Salir</string>
    <string name="ImageButt10">Volver</string>
    <string name="TextV10">Salir</string>
    <string name="TextV11">Volver</string>
    <string name="TextV12">¡Registro completado exitosamente!</string>
    <string name="TextInputLay1">Usuario</string>
    <string name="EditTextUsuario">Usuario</string>
    <string name="EditTextPassword">Contraseña</string>
    <string name="EditTextUsuario1">Usuario</string>
    <string name="EditTextPassword1">Contraseña</string>
    <string name="Butt11">Ingresar</string>
    <string name="TextV13">¿Olvidaste tú Contraseña?</string>
    <string name="ImageV4">Logo Universidad</string>
    <string name="docente">Docente</string>
    <string name="estudiante">Estudiente</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_sign_in_short">INGRESAR</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image">Thumbnail</string>
    <string name="btnHistory">Ver historial</string>
    <string name="btnDelete">Eliminar</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="todo">TODO</string>
    <string name="estado">ESTADO:</string>
    <string name="acceso">HABILITADO</string>
    <string name="nombre">Nombre:</string>
    <string name="doc">Documento:</string>
    <string name="programa">Programa:</string>
    <string name="email">E-mail:</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="textprueba">Prueba</string>
    <string name="textprueba2">limpio</string>
    <string name="documento">Documento</string>
    <string name="select">Seleccionar</string>
    <string name="documentoData">1002890681</string>
    <string name="statusData">Habilitado</string>
    <string name="nameData">Roberto Uchiha</string>
    <string name="emailData">Robertouchiha@ugenerica.edu.co</string>
    <string name="progData">Programación de ninjutsus</string>
    <string name="statusDataProf">Inhabilitado</string>
    <string name="nameDataProf">Jason Momoa</string>
    <string name="emailDataProf">Jasonmomoa@uabc.edu.co</string>
    <string name="progDataProf">Biología marina</string>
    <string name="txtVvalor">Seleccione una Persona</string>
    <string name="txtV2">Seleccione un establecimiento</string>
    <string name="fecha">Fecha:</string>
    <string name="Hora">Hora</string>
    <string name="respuestas">Respuestas</string>
    <string name="history">HISTORIAL</string>
    <string name="horario">Horario</string>
    <string name="asignatura">Asignatura</string>
    <string name="curso">Curso</string>
    <string name="horariostatic">Mie-14-16</string>
    <string name="asigStatic">Python</string>
    <string name="cursoStatic">612B</string>
    <string name="ListCursos">Listado de cursos:</string>
    <string name="codigo">Código:</string>
    <string name="codigoStatic">202108091225:</string>
    <string name="Lunes">Lunes:</string>
    <string name="Martesc">Martes:</string>
    <string name="Miércoles">Miercoles:</string>
    <string name="Jueves">Jueves:</string>
    <string name="Viernes">Viernes:</string>
    <string name="sabado">Sábado:</string>
    <string name="foto">Foto</string>
    <string name="reporte">Reporte diario:</string>
    <string name="listEstudiantes">Listado estudiantes</string>
    <string name="listDocentes">Listado docentes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgetpass">¿Olvidaste la contraseña?</string>
    <string name="registrar">REGISTRARSE</string>
    <string name="title_activity_registro_exitoso">RegistroExitoso</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Administrador">Administrador</string>
    <string name="changePass">Cambiar contraseña</string>
    <string name="RegistrarSintomas">Registrar sintomas</string>
    <string name="btnCursosProfes">Listado de cursos</string>
    <string name="ListEstudiantes">Listado de estudiantes</string>
    <string name="txtAdmin">Administrador</string>
    <string name="txtGestionAdmin">Selecciona la opción a gestionar:</string>
    <string name="txtCursos">CURSOS</string>
    <string name="ListProfesores">Listado profesores</string>
    <string name="todo2">TODO4</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="textViewEstudiante">Estudiante</string>
    <string name="textViewEstudiante1">Estudiante</string>
    <string name="textViewEstudiante2">Estudiante</string>
    <string name="TextVListEstCurs">Listado de Estudiantes</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="ver_detalle">Ver detalle</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="habilitado">Habilitado</string>
    <string name="ver_detalle2">Ver detalle</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="ver_detalle20">Ver detalle</string>
    <string name="ver_detalle21">Ver detalle</string>
    <string name="habilitado15">Habilitado</string>
    <string name="ver_detalle15">Ver detalle</string>
    <string name="todo30">TODO</string>
    <string name="todo31">TODO</string>
    <string name="todo33">TODO</string>
    <string name="ver_detalle30">Ver detalle</string>
    <string name="todo34">TODO</string>
    <string name="todo35">TODO</string>
    <string name="habilitado28">Habilitado</string>
    <string name="ver_detalle29">Ver detalle</string>


    <string name="TextVRegSintomas">Síntomatología</string>
    <string name="TextVPreg1Sint">PREGUNTA 1: ¿Tiene dificultad repentina para respirar o nota falta de aire?</string>
    <string name="RadioBttnSi1">SÍ</string>
    <string name="RadioBttnnNo1">No</string>
    <string name="TextVPreg2Sint">PREGUNTA 2: ¿Presenta fiebre de más de 37,7 grados centígrados?</string>
    <string name="TextVPreg3Sint">PREGUNTA 3: ¿Presenta dolor de garganta y congestión nasal?</string>
    <string name="TextVPreg4Sint">PREGUNTA 4: ¿Presenta dolor de cabeza significativamente importante?</string>
    <string name="TextVPreg5Sint">PREGUNTA 5: ¿Presenta tos persistentemente?</string>
    <string name="BttnRegitSintom">REGISTRAR SÍNTOMAS</string>
    <string name="todo50">TODO</string>
    <string name="todo51">TODO</string>
    <string name="todo60">TODO</string>

    <string name="titulo1">Docentes</string>
    <string name="tituloEst">Estudiantes</string>
    <string name="cod">Código</string>
    <string name="curse">Curso</string>
    <string name="docentecurse">Docente</string>
    <string name="contrasena">Contraseña</string>
    <string name="txtCorreo">Correo:</string>
    <string name="BtnSalirSintomProf">Botón Salir Profesor</string>
    <string name="TxtDate">Date</string>
    <string name="RadioBtnSi1Profess">Si</string>
    <string name="RadioBtnNo1Profes">No</string>
    <string name="RadioBtnSi2Profess">Si</string>
    <string name="RadioBtnNo2Profess">No</string>
    <string name="RadioBtnSi3Profess">Si</string>
    <string name="RadioBtnNo3Profess">No</string>
    <string name="RadioBtnSi4Profess">Si</string>
    <string name="RadioBtnNo4Profess">No</string>
    <string name="RadioBtnSi5Profess">Si</string>
    <string name="RadioBtnNo5Profess">No</string>
    <string name="TxtVFecha">Fecha:</string>
    <string name="BtnSalirSintomEstud">Boton Salir Estudiante</string>
    <string name="RadioBtnSi1Estud">Si</string>
    <string name="RadioBtnNo2Estud">No</string>
    <string name="RadioBtnSi2Estud">Si</string>
    <string name="RadioBtnSi3Estud">Si</string>
    <string name="RadioBtnNo3Estud">No</string>
    <string name="RadioBtnSi4Estud">Si</string>
    <string name="RadioBtnNo4Estud">No</string>
    <string name="RadioBtnSi5Estud">Si</string>
    <string name="RadioBtnNo5Estud">No</string>
    <string name="TxtVFechaEstud">Fecha:</string>
    <string name="RadioBtnNo2Estudi">No</string>
    <string name="RadioBtnSi1Estudi">Si</string>
    <string name="RadioBtnNo1Estudi">No</string>
    <string name="imageView5">Logo Un</string>
    <string name="imageView4">Logo App</string>
    <string name="TxtFechaEstu">Fecha</string>
    <string name="TxtRta1Estu">Respuesta 1</string>
    <string name="TxtRta2Estu">Respuesta 2</string>
    <string name="TxtRta3Estu">Respuesta 3</string>
    <string name="TxtRta4Estu">Respuesta 4</string>
    <string name="TxtRta5Estu">Respuesta 5</string>
    <string name="TxtEstadoEstu">Estado</string>
    <string name="ImageVEstu">Foto Estudiante</string>
    <string name="RecyclerViewEstud">Recycler Estud</string>
    <string name="BtnVolverHistProf">BtnVolverHistProf</string>
    <string name="BtnSalirHistProf">BtnSalirHistProf</string>
    <string name="TxtFechaProf">Fecha</string>
    <string name="TxtRta1Prof">Respuesta 1</string>
    <string name="TxtEstadoProf">Estado</string>
    <string name="TxtRta2Prof">Respuesta</string>
    <string name="TxtRta3Prof">Respuesta 3</string>
    <string name="TxtRta4Prof">Respuesta 4</string>
    <string name="TxtRta5Prof">Respuesta 5</string>

</resources>