<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/u_abc_bcgn"
    android:backgroundTint="#C5D8DC"
    tools:context=".activitys.estudiante.SintomasEstudiantes">

    <ImageButton
        android:id="@+id/BtnVolvSintomEstud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/todo60"
        android:onClick="viewOption"
        android:tint="#018685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/BtnSalirSintomEstud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/BtnSalirSintomEstud"
        android:onClick="viewOption"
        android:tint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TxtVFechaEstud"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center_vertical"
        android:text="@string/TxtVFechaEstud"
        android:textColor="#0C8F8E"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TxtDateEstud"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="115dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa_bold"
        android:inputType="date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TxtVFechaEstud"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TextVRegTitSintomasEstud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextVRegSintomas"
        android:textAlignment="center"
        android:textColor="#018685"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextVPreg1SintEstud"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="147dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextVPreg1Sint"
        android:textColor="#0C8F8E"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@+id/RadioBttnNo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroup1Estud"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RadioBtnSi1Estudi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnSi1Estudi"
            android:textColor="#0C8F8E"
            android:textSize="19sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/RadioBtnNo1Estudi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnNo1Estudi"
            android:textColor="#0C8F8E"
            android:textSize="19sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/TextVPreg2SintEstud"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextVPreg2Sint"
        android:textColor="#0C8F8E"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextVPreg1SintEstud" />

    <RadioGroup
        android:id="@+id/RadioGroup2Estud"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="258dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RadioBtnSi2Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnSi2Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/RadioBtnNo2Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnNo2Estudi"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/TextVPreg3SintEstud"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextVPreg3Sint"
        android:textColor="#0C8F8E"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextVPreg2SintEstud" />

    <RadioGroup
        android:id="@+id/RadioGroup3Estud"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="362dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RadioBtnSi3Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnSi3Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/RadioBtnNo3Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnNo3Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/TextVPreg4SintEstud"
        android:layout_width="260dp"
        android:layout_height="97dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextVPreg4Sint"
        android:textColor="#0C8F8E"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextVPreg3SintEstud" />

    <RadioGroup
        android:id="@+id/RadioGroup4Estud"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="467dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RadioBtnSi4Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnSi4Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/RadioBtnNo4Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnNo4Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/TextVPreg5SintEstud"
        android:layout_width="260dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/TextVPreg5Sint"
        android:textColor="#0C8F8E"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextVPreg4SintEstud" />

    <RadioGroup
        android:id="@+id/RadioGroup5Estud"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="568dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/RadioBtnSi5Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnSi5Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/RadioBtnNo5Estud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/RadioBtnNo5Estud"
            android:textColor="#0C8F8E"
            android:textSize="19sp" />

    </RadioGroup>

    <Button
        android:id="@+id/BtnRegistSintomEstud"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttons_styles2"
        android:backgroundTint="#018584"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/BttnRegitSintom"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>