<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4DBFBE"
    android:onClick="onItemClick">

    <TextView
        android:id="@+id/descDocente"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="viewHistorialPof"
        android:paddingStart="10dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/desCurse"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/desCurse"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="viewHistorialPof"
        android:paddingStart="10dp"
        android:text="@string/curse"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/title"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/cod"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>